--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>ministry.careers | Coming 2015–2016</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.0.min.js"></script>
     </head>
     <body>
         <div id="wrapper">
-            <h1>ministry<span class="light-blue">.</span>careers</h1>
-            <h2>Coming 2015<span class="light-blue">&ndash;</span>2016</h2>
+            <h1>ministry.careers</h1>
+            <h2>Coming 2015&ndash;2016</h2>
         </div>
     </body>
 </html>
