Re-implement color tweaks on landing page.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         <div id="wrapper">
-            <h1>ministry.careers</h1>
-            <h2>Coming 2015&ndash;2016</h2>
+            <h1>ministry<span class="light-blue">.</span>careers</h1>
+            <h2>Coming 2015<span class="light-blue">&ndash;</span>2016</h2>
         </div>
     </body>
 </html>
